[project]
name = "videohosting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.0",
    "orjson>=3.11.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "uvicorn>=0.35.0",
]
